[package]
name = "druid_bindings"
version = "0.1.0"
authors = ["Robert Wittams <robert@wittams.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {path = "../druid/druid/", features=["im"]}
#druid = {git = "https://github.com/rjwittams/druid", features=["im"] }
im = { version = "15.0.0"}